
*** gaulss and ziplss families, implementing models with multiple linear 
  predictors. For gaulss there is a linear predictor for the Gaussian mean
  and another for the stnadard deviation. For ziplss there is a linear
  predictor controlling `potential presense' and another controlling 
  the Poisson mean, given presence. 

*** mvn family for multivariate normal additive models.

* With REML/ML smoothness selection in gam an extra covariance matrix 'Vc'
  is now computed which allows for smoothing parameter uncertainty. See
  the 'unconditional' arguments to 'predict.gam' and 'plot.gam' to use this. 

* gam now defaults to the Pearson estimator of the scale parameter to avoid
  poor scale estimates in the quasipoisson case with low counts (and possibly
  elsewhere). Gaussian, Poisson and binomial inference invariant to change. 
  Thanks to Greg Dropkin, for reporting the issue.

* 'print.gam' and 'summary.gam' now report the rank of the model if it is
   rank deficient. 'gam.check' reports the model rank whenever it is 
   available.

* fix of bug in 'k.check' called by 'gam.check' that gave an error for 
  smooths with by variables.

* predict.gam now checks that factors in newdata do not contain more
  levels than those used in fitting.

* 'bfgs' now uses a finite difference approximation for the initial inverse 
  Hessian. 

1.7-28

* exclude.too.far updated to use kd-tree instead of inefficient search for 
  neighbours. This can make plot.gam *much* faster for large datasets.

* Change in smoothCon, so that sweep and drop constraints (default for bam
  for efficiency reasons) are no longer allowed with by variables and matrix 
  arguments (could lead to confusing results with factor by variables in bam). 

* 'ti' terms now allow control of which marginals to constrain, via 'mc'.
  Allows e.g. y ~ ti(x) + ti(x,z,mc=c(0,1)) - for experts only! 

* tensor.prod.model.matrix re-written to call C code. Around 5-10 times